<resources>
    <!-- Preference Titles -->
    <string name="user_header">Name</string>
    <string name="contact_header">Kontaktdaten</string>

    <!-- User Preferences -->
    <string name="firstname_title">Vorname</string>
    <string name="lastname_title">Nachname</string>
    <string name="email_title">E-Mail</string>
    <string name="phone_title">Telefon</string>
    <string name="credit_description">Diese App ist im Rahmen eines Studienprojekts der IU Hochschule im Modul \"Mobile Software Engineering\" entstanden.</string>
    <string name="credit_images_description">Ein Dank für die kostenlos zur Verfügung gestellten Bilder geht an folgende Autoren (Quellen):</string>
    <string name="title_welcome">Herzlich Willkommen</string>
    <string name="welcome_info">Hier können Sie einfach und bequem Anliegen an die Stadt Rostock melden. Nutzen Sie die App um der Stadt Ihre Probleme und Ideen mitzuteilen.</string>


    <string name="app_name">Klarschiff HRO</string>
    <string name="title_activity_main">Klarschiff HRO</string>
    <string name="nav_header_title">Klarschiff HRO</string>
    <string name="nav_header_subtitle">Meldeportal für Anliegen</string>
    <string name="nav_header_desc">Logo</string>
    <string name="action_settings">Einstellungen</string>

    <string name="menu_home">Start</string>
    <string name="menu_issues">Meine Meldungen</string>
    <string name="new_issue">Neue Meldung</string>
    <string name="menu_search">Suche</string>
    <string name="action_credits">Credits</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="search_info">Nutzen Sie unsere Suchfunktion um sich alle Meldungen und Anliegen, welche an die Stadt Rostock übermittelt wurden anzusehen und zu durchsuchen.</string>
    <string name="btn_back">Zurück</string>
    <string name="btn_next">Weiter</string>
    <string name="btn_send">Abschicken</string>
    <string name="new_issue_step1">Gruppe wählen</string>
    <string name="new_issue_step2">Kategorie wählen</string>
    <string name="new_issue_step3">Ortsangabe</string>
    <string name="new_issue_step4">Beschreibung</string>
    <string name="new_issue_step5">Foto</string>
    <string name="new_issue_step6">Kontaktdaten</string>
    <string name="new_issue_step7">Zusammenfassung</string>
    <string name="label_address">Anschrift (Straße, Wohnort)</string>
    <string name="label_description">Bitte beschreiben Sie Ihr Anliegen.</string>
    <string name="label_firstname">Vorname (optional)</string>
    <string name="label_lastname">Nachname (optional)</string>
    <string name="label_email">E-Mail-Adresse</string>
    <string name="label_phone">Telefonnummer (optional)</string>
    <string name="label_marker">Adresse festlegen</string>
    <string name="map_permissions_hint">Sie können die Karte nicht nutzen, da Sie der App die notwendigen Berechtigungen nicht erteilt haben. Nutzen Sie stattdessen das Textfeld zur Eingabe.</string>
    <string name="map_hint">Halten Sie den Positionsmarker gedrückt, um diesen manuell zu verschieben. Die gewählte Position wird automatisch ins Adressfeld übernommen.</string>
    <string name="error_load_groups">Service Gruppen können nicht geladen werden</string>
    <string name="error_load_categories">Service Kategorien können nicht geladen werden</string>
    <string name="error_step1">Bitte wählen Sie zu erst einen Service-Gruppe aus.</string>
    <string name="error_step2">Bitte wählen Sie zu erst einen Service-Kategorie aus.</string>
    <string name="error_step3">Bitte geben Sie zu erst eine Anschrift an.</string>
    <string name="error_step4">Bitte fügen Sie Ihren Anliegen eine Beschreibung hinzu.</string>
    <string name="error_step6">Bitte geben Sie mindestens Ihre E-Mail-Adresse an.</string>
    <string name="error_add_new_issue">"Ihr Anliegen konnte aus folgendem Grund nicht übermittelt werden:"</string>
    <string name="contactdata_hint">Wenn Sie Ihre Kontaktdaten in den Einstellungen hinterlegt haben, dann werden diese hier automatisch eingefügt.</string>
    <string name="summary_hint">Folgende Daten werden übermittelt, sobald Sie die Schaltfläche "Abschicken" nutzen.</string>
    <string name="summary_service_group">Service Gruppe:</string>
    <string name="summary_service_category">Service Kategorie:</string>
    <string name="summary_service_address">Anschrift:</string>
    <string name="summary_service_description">Beschreibung:</string>
    <string name="summary_service_photo">Foto:</string>
    <string name="summary_service_contact">Kontaktdaten:</string>
    <string name="address_by_position">Adresse in Karte markiert</string>
    <string name="no_photo">Kein Foto hochgeladen</string>
    <string name="photo_hint">Wenn Sie mögen können Sie über das Kamera-Symbol optional ein Foto zu Ihrer Anfrage hinzufügen.</string>
    <string name="error_camera">Die Kamera kann im Moment nicht verwendet werden.</string>
    <string name="error_network">Sie haben keine Verbindung zum Internet. Die App kann deshalb nicht im vollen Umfang genutzt werden.</string>
    <string name="label_status">Status:</string>
    <string name="status_pending">offen</string>
    <string name="status_reviewed">überprüft</string>
    <string name="status_in_process">in Bearbeitung</string>
    <string name="status_received">eingegangen</string>
    <string name="status_rejected">abgelehnt</string>
    <string name="status_processed">erledigt</string>
    <string name="status_closed">geschlossen</string>
    <string name="search_count">Treffer gefunden</string>
    <string name="label_search">Suche</string>
    <string name="sort_category_asc">Kategorie aufsteigend</string>
    <string name="sort_category_desc">Kategorie absteigend</string>
    <string name="sort_status_asc">Status aufsteigend</string>
    <string name="sort_status_desc">Status absteigend</string>
    <string name="sort_date_asc">Datum aufsteigend</string>
    <string name="sort_date_desc">Datum absteigend</string>
    <string name="menu_detail">Details</string>
    <string name="error_detail">Fehler beim Laden der Detailansicht</string>
    <string name="label_requesttime">Erstellt am:</string>
    <string name="label_updatedtime">Letzte Aktualisierung:</string>
    <string name="label_agency">Zuständiges Amt:</string>
    <string name="title_search">Meldungen durchsuchen</string>
    <string name="error_add_new_issue_database">Das Anliegen konnte übermittelt werden, wir können es in der App aber nicht unter \"Meine Anliegen\" auflisten.</string>
</resources>