<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.search.SearchFragment">

    <group android:id="@+id/sortDate">
        <item
            android:id="@+id/sortDateAsc"
            android:icon="@drawable/sort_up"
            android:orderInCategory="100"
            android:title="@string/sort_date_asc"
            app:showAsAction="never" />
        <item
            android:id="@+id/sortDateDesc"
            android:icon="@drawable/sort_down"
            android:orderInCategory="101"
            android:title="@string/sort_date_desc"
            app:showAsAction="never" />
    </group>
    <group android:id="@+id/sortCategory">
        <item
            android:id="@+id/sortCategoryAsc"
            android:icon="@drawable/sort_up"
            android:orderInCategory="110"
            android:title="@string/sort_category_asc"
            app:showAsAction="never" />
        <item
            android:id="@+id/sortCategoryDesc"
            android:icon="@drawable/sort_down"
            android:orderInCategory="111"
            android:title="@string/sort_category_desc"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/sortStatus">
        <item
            android:id="@+id/sortStatusAsc"
            android:icon="@drawable/sort_up"
            android:orderInCategory="120"
            android:title="@string/sort_status_asc"
            app:showAsAction="never" />
        <item
            android:id="@+id/sortStatusDesc"
            android:icon="@drawable/sort_down"
            android:orderInCategory="121"
            android:title="@string/sort_status_desc"
            app:showAsAction="never" />
    </group>
</menu>