<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newissue.step7.Step7Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:orientation="vertical"
        android:isScrollContainer="true"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/activity_vertical_margin">

        <TextView
            style="@style/TextAppearance.Compat.Notification.Info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/summary_hint" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/activity_horizontal_small_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:text="@string/summary_service_group" />

                <TextView
                    android:id="@+id/summaryGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/activity_horizontal_small_margin"
                    android:paddingBottom="@dimen/activity_horizontal_small_margin"
                    android:text="@string/summary_service_category" />

                <TextView
                    android:id="@+id/summaryCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/activity_horizontal_small_margin"
                    android:paddingBottom="@dimen/activity_horizontal_small_margin"
                    android:text="@string/summary_service_address" />

                <TextView
                    android:id="@+id/summaryAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/activity_horizontal_small_margin"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/activity_horizontal_small_margin"
                    android:paddingBottom="@dimen/activity_horizontal_small_margin"
                    android:text="@string/summary_service_description" />

                <TextView
                    android:id="@+id/summaryDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/activity_horizontal_small_margin"
                    android:paddingBottom="@dimen/activity_horizontal_small_margin"
                    android:text="@string/summary_service_photo" />

                <TextView
                    android:id="@+id/summaryPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin" />

                <ImageView
                    android:id="@+id/imagePreview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:visibility="gone" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/activity_horizontal_small_margin"
                    android:paddingBottom="@dimen/activity_horizontal_small_margin"
                    android:text="@string/summary_service_contact" />

                <TextView
                    android:id="@+id/summaryContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>