<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/activity_vertical_margin">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/headerImage1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:adjustViewBounds="true"
                    android:maxHeight="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/nl_hro2014_12" />

                <TextView
                    android:id="@+id/textWelcome"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/title_welcome"
                    android:textAlignment="viewStart"
                    android:textColor="@color/secondary"
                    app:layout_constraintBottom_toBottomOf="@+id/cardView1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textUsername"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:textAlignment="viewStart"
                    android:textColor="@color/primary"
                    app:layout_constraintBottom_toBottomOf="@+id/textWelcome"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textWelcomeInfo"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/welcome_info"
                    android:textAlignment="viewStart"
                    app:layout_constraintBottom_toBottomOf="@+id/textUsername"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_add_issue"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/activity_horizontal_small_margin"
                        android:text="@string/new_issue" />
                    <Button
                        android:id="@+id/btnIssues"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_issues" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_small_margin"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/headerImage2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:adjustViewBounds="true"
                    android:maxHeight="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hro_nl_28" />

                <TextView
                    android:id="@+id/textSearchInfo"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_marginVertical="@dimen/activity_vertical_margin"
                    android:text="@string/search_info"
                    android:textAlignment="viewStart"
                    app:layout_constraintBottom_toBottomOf="@+id/textUsername"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <Button
                    android:id="@+id/btnSearch"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_search" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>